src/parser.rs
use std::collections::{HashMap, HashSet};

use anyhow::{anyhow, bail, Result};

use crate::ast::{
    AggregateKind, ConstDecl, DbContextDecl, DbOrderBy, DbWhere, ErrorHandlerDecl, Expr, FieldDecl,
    FieldReference, FunctionDecl, MiddlewareDecl, ModelDecl, ModelKind, NavigationField,
    NavigationKind, OnDeleteAction, Program, RouteDecl, RouteProtocol, SortDir, Stmt, TypeSpec,
    TypedParam, ValidateField, ValidateRule, Visibility, WhereExpr,
};

fn visibility_from(is_pub: bool) -> Visibility {
    if is_pub {
        Visibility::Public
    } else {
        Visibility::Private
    }
}
use crate::diag::SourceMap;
use crate::lexer::{Keyword, Lexer, TemplatePart, Token, TokenKind};

pub fn parse_program(source: &str) -> Result<Program> {
    let mut parser = Parser::new(source)?;
    parser.parse_program()
}

/// FQN helper used by validate_program. Identical shape to `runner::fqn_key`
/// but duplicated here to avoid a dependency from parser → runner.
fn ns_fqn(namespace: &[String], name: &str) -> String {
    if namespace.is_empty() {
        name.to_lowercase()
    } else {
        let ns = namespace
            .iter()
            .map(|s| s.to_lowercase())
            .collect::<Vec<_>>()
            .join(".");
        format!("{}.{}", ns, name.to_lowercase())
    }
}

pub fn validate_program(program: &Program) -> Result<()> {
    let mut ctx_names = HashSet::new();
    let mut ctx_drivers: HashMap<String, String> = HashMap::new();
    for ctx in &program.dbcontexts {
        let key = ns_fqn(&ctx.namespace, &ctx.name);
        if !ctx_names.insert(key) {
            bail!("Duplicate dbcontext name: {}", ctx.name);
        }
        if ctx.driver.trim().is_empty() {
            bail!("dbcontext '{}' has empty driver", ctx.name);
        }
        ctx_drivers.insert(ctx.name.to_lowercase(), ctx.driver.to_lowercase());
    }

    let mut model_names = HashSet::new();
    let mut entity_names = HashSet::new();
    let mut entity_contexts: HashMap<String, Option<String>> = HashMap::new();
    let mut db_tables: HashSet<(String, String)> = HashSet::new();
    let mut entity_fields_by_table: HashMap<(String, String), Vec<String>> = HashMap::new();
    let mut entity_navigations: HashMap<String, HashMap<String, NavigationField>> = HashMap::new();
    for model in &program.models {
        let model_key = ns_fqn(&model.namespace, &model.name);
        if !model_names.insert(model_key) {
            bail!("Duplicate model name: {}", model.name);
        }

        if model.kind != ModelKind::Entity {
            continue;
        }
        let key = ns_fqn(&model.namespace, &model.name);
        if !entity_names.insert(key) {
            bail!("Duplicate entity name: {}", model.name);
        }

        let resolved_context = resolve_entity_context_name(program, model, &ctx_names)?;
        let resolved_context_lc = resolved_context.as_ref().map(|v| v.to_lowercase());
        entity_contexts.insert(model.name.to_lowercase(), resolved_context_lc.clone());
        if let Some(ctx_name) = resolved_context_lc {
            db_tables.insert((ctx_name.clone(), model.name.to_lowercase()));
            db_tables.insert((ctx_name.clone(), to_snake_case(&model.name).to_lowercase()));

            let fields: Vec<String> = model.fields.iter().map(|f| f.name.to_lowercase()).collect();
            entity_fields_by_table.insert(
                (ctx_name.clone(), model.name.to_lowercase()),
                fields.clone(),
            );
            entity_fields_by_table.insert(
                (ctx_name, to_snake_case(&model.name).to_lowercase()),
                fields,
            );
        }

        let mut field_names = HashSet::new();
        let resolved_driver = resolve_entity_driver(program, model, &ctx_drivers)?;
        for field in &model.fields {
            let field_key = field.name.to_lowercase();
            if !field_names.insert(field_key) {
                bail!(
                    "Duplicate field '{}' in entity '{}'",
                    field.name,
                    model.name
                );
            }

            validate_type_spec_for_driver(&field.ty, &resolved_driver)
                .map_err(|err| anyhow!("Entity '{}', field '{}': {err}", model.name, field.name))?;

            if field.is_auto_increment {
                let ty_lc = field.ty.name.to_ascii_lowercase();
                if ty_lc != "int" && ty_lc != "integer" && ty_lc != "bigint" {
                    bail!(
                        "Entity '{}', field '{}': autoincrement is only valid on int / bigint types (got '{}')",
                        model.name,
                        field.name,
                        field.ty.name
                    );
                }
            }
        }

        if !model.navigations.is_empty() {
            let mut nav_names: HashSet<String> = HashSet::new();
            let mut nav_map: HashMap<String, NavigationField> = HashMap::new();
            for nav in &model.navigations {
                let key = nav.name.to_lowercase();
                if !nav_names.insert(key.clone()) {
                    bail!(
                        "Entity '{}': duplicate navigation '{}'",
                        model.name,
                        nav.name
                    );
                }
                nav_map.insert(key, nav.clone());
            }
            entity_navigations.insert(model.name.to_lowercase(), nav_map);
        }
    }

    // After all entities are registered: resolve each navigation's target.
    for model in &program.models {
        if model.kind != ModelKind::Entity {
            continue;
        }
        for nav in &model.navigations {
            let target_key = nav.target_entity.to_lowercase();
            let target = program
                .models
                .iter()
                .find(|m| m.kind == ModelKind::Entity && m.name.to_lowercase() == target_key)
                .ok_or_else(|| {
                    anyhow!(
                        "Entity '{}' navigation '{}' references unknown entity '{}'",
                        model.name,
                        nav.name,
                        nav.target_entity
                    )
                })?;
            let field_key = nav.target_field.to_lowercase();
            if !target
                .fields
                .iter()
                .any(|f| f.name.to_lowercase() == field_key)
            {
                bail!(
                    "Entity '{}' navigation '{}' references unknown column '{}.{}'",
                    model.name,
                    nav.name,
                    nav.target_entity,
                    nav.target_field
                );
            }
        }
    }

    // Foreign key references — verify target entity + column exist after all
    // entities have been registered.
    for model in &program.models {
        if model.kind != ModelKind::Entity {
            continue;
        }
        for field in &model.fields {
            let Some(reference) = &field.references else {
                continue;
            };
            let target_key = reference.entity.to_lowercase();
            let target = program
                .models
                .iter()
                .find(|m| m.kind == ModelKind::Entity && m.name.to_lowercase() == target_key)
                .ok_or_else(|| {
                    anyhow!(
                        "Entity '{}' field '{}' references unknown entity '{}'",
                        model.name,
                        field.name,
                        reference.entity
                    )
                })?;

            let column_key = reference.column.to_lowercase();
            if !target
                .fields
                .iter()
                .any(|f| f.name.to_lowercase() == column_key)
            {
                bail!(
                    "Entity '{}' field '{}' references unknown column '{}.{}'",
                    model.name,
                    field.name,
                    reference.entity,
                    reference.column
                );
            }
        }
    }

    let mut fn_names = HashSet::new();
    for function in &program.functions {
        let key = ns_fqn(&function.namespace, &function.name);
        if !fn_names.insert(key) {
            bail!("Duplicate function name: {}", function.name);
        }

        let mut param_names = HashSet::new();
        for param in &function.params {
            let param_key = param.name.to_lowercase();
            if !param_names.insert(param_key) {
                bail!(
                    "Function '{}': duplicate parameter '{}'",
                    function.name,
                    param.name
                );
            }
        }
    }

    let mut route_keys = HashSet::new();
    for route in &program.routes {
        let method = route.method.to_ascii_uppercase();
        if !matches!(
            method.as_str(),
            "GET" | "POST" | "PUT" | "DELETE" | "PATCH" | "WS" | "SSE"
        ) {
            bail!("Unsupported route method: {}", route.method);
        }

        let key = format!("{} {}", method, route.path);
        if !route_keys.insert(key) {
            bail!("error[E005]: Duplicate route: {} {}", method, route.path);
        }

        if route.handler.is_some() && !route.body.is_empty() {
            bail!("Route cannot define both handler and inline body");
        }
        if route.handler.is_none() && route.body.is_empty() {
            bail!("Route must define either handler or inline body");
        }

        if let Some(handler) = &route.handler {
            let handler_key = handler.to_lowercase();
            // Accept either a fully-qualified name or a bare function name that
            // matches any declared function (any namespace).
            let matches_any = fn_names.contains(&handler_key)
                || program.functions.iter().any(|f| {
                    let fqn = ns_fqn(&f.namespace, &f.name);
                    fqn == handler_key || f.name.to_lowercase() == handler_key
                });
            if !matches_any {
                // Qualified handler (`pkg.fn`) may live in a dependency that
                // single-file validation can't see — let the runtime resolver
                // catch a real miss.
                if !handler.contains('.') {
                    bail!("Route handler '{}' is not defined as a function", handler);
                }
            }
        }

        if route.handler.is_none() {
            validate_stmts(
                &route.body,
                &ctx_names,
                &entity_contexts,
                &db_tables,
                &entity_fields_by_table,
            )?;
        }
    }

    for function in &program.functions {
        validate_stmts(
            &function.body,
            &ctx_names,
            &entity_contexts,
            &db_tables,
            &entity_fields_by_table,
        )
        .map_err(|err| anyhow!("Function '{}': {err}", function.name))?;
    }

    let mut mw_names = HashSet::new();
    for mw in &program.middlewares {
        let key = ns_fqn(&mw.namespace, &mw.name);
        if !mw_names.insert(key) {
            bail!("Duplicate middleware name: {}", mw.name);
        }
        validate_stmts(
            &mw.body,
            &ctx_names,
            &entity_contexts,
            &db_tables,
            &entity_fields_by_table,
        )
        .map_err(|err| anyhow!("Middleware '{}': {err}", mw.name))?;
    }

    if let Some(handler) = &program.error_handler {
        validate_stmts(
            &handler.body,
            &ctx_names,
            &entity_contexts,
            &db_tables,
            &entity_fields_by_table,
        )
        .map_err(|err| anyhow!("errorHandler: {err}"))?;
    }

    for route in &program.routes {
        for mw_ref in &route.middlewares {
            let key = mw_ref.to_lowercase();
            let matches_any = mw_names.contains(&key)
                || program.middlewares.iter().any(|m| {
                    let fqn = ns_fqn(&m.namespace, &m.name);
                    fqn == key || m.name.to_lowercase() == key
                });
            if !matches_any {
                // Qualified references (`pkg.Mw`) may target a namespace that
                // lives in another file or a dependency package — single-file
                // validation can't see those. Defer the check to runtime.
                if mw_ref.contains('.') {
                    continue;
                }
                bail!(
                    "Route {} {} references unknown middleware '{}'",
                    route.method,
                    route.path,
                    mw_ref
                );
            }
        }
    }

    // After the main pass, walk every DbSelect's `with_relations` and verify
    // each name is a real navigation declared on the queried entity.
    for function in &program.functions {
        check_with_relations_in_stmts(&function.body, &entity_navigations)?;
    }
    for route in &program.routes {
        check_with_relations_in_stmts(&route.body, &entity_navigations)?;
    }
    for mw in &program.middlewares {
        check_with_relations_in_stmts(&mw.body, &entity_navigations)?;
    }

    // Compile-time field-access check for typed function parameters.
    let model_fields_for_typecheck: HashMap<String, HashSet<String>> = program
        .models
        .iter()
        .map(|m| {
            (
                m.name.to_lowercase(),
                m.fields.iter().map(|f| f.name.to_lowercase()).collect(),
            )
        })
        .collect();

    for function in &program.functions {
        let mut locals: HashMap<String, String> = HashMap::new();
        for param in &function.params {
            if let Some(ty) = &param.ty {
                if let Some(base) = strip_type_to_model_name(ty) {
                    if model_fields_for_typecheck.contains_key(&base.to_lowercase()) {
                        locals.insert(param.name.to_lowercase(), base);
                    }
                }
            }
        }
        check_typed_field_access_in_stmts(&function.body, &mut locals, &model_fields_for_typecheck)
            .map_err(|err| anyhow!("Function '{}': {err}", function.name))?;
    }

    // Compile-time mutation-field check: every `var.field = ...`, `insert var`,
    // `update var`, `delete var` where `var` is locally bound to `new Entity()`
    // must reference a field that actually exists on that entity, and (for
    // DB writes) the target table must match the bound entity.
    //
    // Lives at the bottom of `validate_program` on purpose — earlier passes
    // (dbcontext / table existence / WHERE column checks) get to fire first.
    let entity_fields_for_mutations: HashMap<String, Vec<String>> = program
        .models
        .iter()
        .filter(|m| m.kind == ModelKind::Entity)
        .map(|m| {
            (
                m.name.to_lowercase(),
                m.fields.iter().map(|f| f.name.to_lowercase()).collect(),
            )
        })
        .collect();

    for function in &program.functions {
        let mut bindings: EntityBindings = HashMap::new();
        check_mutation_fields_in_stmts(&function.body, &mut bindings, &entity_fields_for_mutations)
            .map_err(|err| anyhow!("Function '{}': {err}", function.name))?;
    }
    for route in &program.routes {
        if route.handler.is_some() {
            continue;
        }
        let label = format!("Route {} {}", route.method.to_ascii_uppercase(), route.path);
        let mut bindings: EntityBindings = HashMap::new();
        check_mutation_fields_in_stmts(&route.body, &mut bindings, &entity_fields_for_mutations)
            .map_err(|err| anyhow!("{label}: {err}"))?;
    }
    for mw in &program.middlewares {
        let mut bindings: EntityBindings = HashMap::new();
        check_mutation_fields_in_stmts(&mw.body, &mut bindings, &entity_fields_for_mutations)
            .map_err(|err| anyhow!("Middleware '{}': {err}", mw.name))?;
    }
    if let Some(handler) = &program.error_handler {
        let mut bindings: EntityBindings = HashMap::new();
        check_mutation_fields_in_stmts(&handler.body, &mut bindings, &entity_fields_for_mutations)
            .map_err(|err| anyhow!("errorHandler: {err}"))?;
    }

    validate_consts(program)?;

    Ok(())
}

/// Enforce the module-level `const` invariants: no duplicates, every value is
/// a constant expression (literals / other consts / arithmetic / comparison /
/// logical ops / unary `-`/`!` / array & object literals), and no circular
/// references (including self-reference like `const X = X + 1`).
fn validate_consts(program: &Program) -> Result<()> {
    // Declared const names, lowercased. Duplicate detection runs alongside.
    let mut const_names: HashSet<String> = HashSet::new();
    for c in &program.consts {
        let key = c.name.to_lowercase();
        if !const_names.insert(key) {
            bail!("duplicate const declaration: {}", c.name);
        }
    }

    // (a) Every const value must be a constant expression.
    for c in &program.consts {
        validate_const_expr(&c.expr, &const_names).map_err(|err| {
            anyhow!(
                "const '{}' must be a constant expression ({err})",
                c.name
            )
        })?;
    }

    // (b) Cycle / self-reference detection over the const dependency graph.
    let mut deps: HashMap<String, Vec<String>> = HashMap::new();
    for c in &program.consts {
        let mut refs = const_expr_var_refs(&c.expr);
        refs.retain(|n| const_names.contains(n));
        deps.insert(c.name.to_lowercase(), refs);
    }
    // DFS coloring: 0 = unvisited, 1 = visiting (on stack), 2 = done.
    let mut color: HashMap<String, u8> = HashMap::new();
    for c in &program.consts {
        let key = c.name.to_lowercase();
        if color.get(&key).copied().unwrap_or(0) == 0
            && const_has_cycle(&key, &deps, &mut color)
        {
            bail!("circular const reference involving '{}'", c.name);
        }
    }

    Ok(())
}

/// Recursively verify `expr` is a constant expression. `const_names` holds the
/// lowercased names of all declared consts; a `Var` is allowed only when it
/// names one of them. Returns a short description of the offending construct on
/// failure (the caller prefixes it with the const name).
fn validate_const_expr(expr: &Expr, const_names: &HashSet<String>) -> Result<()> {
    match expr {
        Expr::Int(_) | Expr::Float(_) | Expr::Str(_) | Expr::Bool(_) | Expr::Null => Ok(()),
        Expr::Var(name) => {
            if const_names.contains(&name.to_lowercase()) {
                Ok(())
            } else {
                bail!("const expression may only reference other consts, not '{name}'")
            }
        }
        Expr::Add(a, b)
        | Expr::Sub(a, b)
        | Expr::Mul(a, b)
        | Expr::Div(a, b)
        | Expr::Mod(a, b)
        | Expr::Eq(a, b)
        | Expr::Neq(a, b)
        | Expr::Lt(a, b)
        | Expr::Lte(a, b)
        | Expr::Gt(a, b)
        | Expr::Gte(a, b)
        | Expr::And(a, b)
        | Expr::Or(a, b) => {
            validate_const_expr(a, const_names)?;
            validate_const_expr(b, const_names)
        }
        Expr::Neg(inner) | Expr::Not(inner) => validate_const_expr(inner, const_names),
        Expr::ArrayLit(items) => {
            for item in items {
                validate_const_expr(item, const_names)?;
            }
            Ok(())
        }
        Expr::ObjectLit(pairs) => {
            for (_, value) in pairs {
                validate_const_expr(value, const_names)?;
            }
            Ok(())
        }
        Expr::Call { .. }
        | Expr::DbSelect { .. }
        | Expr::DbCount { .. }
        | Expr::DbAggregate { .. }
        | Expr::FieldGet { .. }
        | Expr::NewEntity { .. }
        | Expr::Await(_) => {
            bail!("function calls / DB queries / field access are not allowed")
        }
    }
}

/// Collect the lowercased names of every `Expr::Var` referenced inside `expr`,
/// recursing through the const-allowed expression shapes. Used to build the
/// const dependency graph for cycle detection.
fn const_expr_var_refs(expr: &Expr) -> Vec<String> {
    let mut out = Vec::new();
    collect_const_var_refs(expr, &mut out);
    out
}

fn collect_const_var_refs(expr: &Expr, out: &mut Vec<String>) {
    match expr {
        Expr::Var(name) => out.push(name.to_lowercase()),
        Expr::Add(a, b)
        | Expr::Sub(a, b)
        | Expr::Mul(a, b)
        | Expr::Div(a, b)
        | Expr::Mod(a, b)
        | Expr::Eq(a, b)
        | Expr::Neq(a, b)
        | Expr::Lt(a, b)
        | Expr::Lte(a, b)
        | Expr::Gt(a, b)
        | Expr::Gte(a, b)
        | Expr::And(a, b)
        | Expr::Or(a, b) => {
            collect_const_var_refs(a, out);
            collect_const_var_refs(b, out);
        }
        Expr::Neg(inner) | Expr::Not(inner) => collect_const_var_refs(inner, out),
        Expr::ArrayLit(items) => {
            for item in items {
                collect_const_var_refs(item, out);
            }
        }
        Expr::ObjectLit(pairs) => {
            for (_, value) in pairs {
                collect_const_var_refs(value, out);
            }
        }
        _ => {}
    }
}

/// DFS over the const dependency graph; returns true if a cycle is reachable
/// from `node`. `color` records 1 = on the current stack, 2 = fully explored.
fn const_has_cycle(
    node: &str,
    deps: &HashMap<String, Vec<String>>,
    color: &mut HashMap<String, u8>,
) -> bool {
    color.insert(node.to_string(), 1);
    if let Some(children) = deps.get(node) {
        for child in children {
            match color.get(child).copied().unwrap_or(0) {
                1 => return true,
                0 => {
                    if const_has_cycle(child, deps, color) {
                        return true;
                    }
                }
                _ => {}
            }
        }
    }
    color.insert(node.to_string(), 2);
    false
}

/// Map of locally-bound variable name (lowercased) -> entity name (original
/// case, as written in source). Tracks `let v = new Entity();` bindings within
/// a function/route/middleware body so we can spot bogus `v.field = ...`
/// writes and mismatched `insert v into ctx.Table;` at compile time.
type EntityBindings = HashMap<String, String>;

fn check_mutation_fields_in_stmts(
    stmts: &[Stmt],
    bindings: &mut EntityBindings,
    entity_fields: &HashMap<String, Vec<String>>,
) -> Result<()> {
    for stmt in stmts {
        check_mutation_fields_in_stmt(stmt, bindings, entity_fields)?;
    }
    Ok(())
}

fn check_mutation_fields_in_stmt(
    stmt: &Stmt,
    bindings: &mut EntityBindings,
    entity_fields: &HashMap<String, Vec<String>>,
) -> Result<()> {
    match stmt {
        Stmt::Let { name, value } | Stmt::Assign { name, value } => {
            let key = name.to_lowercase();
            if let Expr::NewEntity { entity } = value {
                bindings.insert(key, entity.clone());
            } else {
                // Re-assigning to something other than `new Entity()` drops
                // the previous binding — we can no longer prove the var still
                // refers to that entity.
                bindings.remove(&key);
            }
            Ok(())
        }
        Stmt::FieldAssign { var, field, .. } => {
            if let Some(entity) = bindings.get(&var.to_lowercase()) {
                if let Some(fields) = entity_fields.get(&entity.to_lowercase()) {
                    let needle = field.to_lowercase();
                    if !fields.iter().any(|f| f == &needle) {
                        bail!("Unknown column '{}' on entity '{}'", field, entity);
                    }
                }
            }
            Ok(())
        }
        Stmt::DbInsert { var, table, .. }
        | Stmt::DbUpdate { var, table, .. }
        | Stmt::DbDelete { var, table, .. } => {
            if let Some(entity) = bindings.get(&var.to_lowercase()) {
                if !table_matches_entity(table, entity) {
                    bail!(
                        "variable '{}' is bound to entity '{}' but the target table is '{}'",
                        var,
                        entity,
                        table
                    );
                }
            }
            Ok(())
        }
        Stmt::DbDeleteWhere { .. }
        | Stmt::Print(_)
        | Stmt::Expr(_)
        | Stmt::Return(_)
        | Stmt::Break
        | Stmt::Continue
        | Stmt::ValidateBody { .. } => Ok(()),
        Stmt::If {
            then_body,
            else_body,
            ..
        } => {
            let snapshot = bindings.clone();
            let mut then_state = snapshot.clone();
            check_mutation_fields_in_stmts(then_body, &mut then_state, entity_fields)?;
            let end_state = if let Some(eb) = else_body {
                let mut else_state = snapshot.clone();
                check_mutation_fields_in_stmts(eb, &mut else_state, entity_fields)?;
                intersect_bindings(&then_state, &else_state)
            } else {
                // Else may not execute — keep only bindings that survived the
                // then-branch unchanged from before the if.
                intersect_bindings(&then_state, &snapshot)
            };
            *bindings = end_state;
            Ok(())
        }
        Stmt::While { body, .. } => {
            let snapshot = bindings.clone();
            let mut body_state = snapshot.clone();
            check_mutation_fields_in_stmts(body, &mut body_state, entity_fields)?;
            // Loop body may not run; keep only bindings that match the
            // pre-loop state.
            *bindings = intersect_bindings(&body_state, &snapshot);
            Ok(())
        }
        Stmt::ForIn { var, body, .. } => {
            let snapshot = bindings.clone();
            let mut body_state = snapshot.clone();
            // Loop variable shadowing: clear any prior binding for it before
            // walking the body so an inner `v.field = ...` doesn't reuse an
            // outer entity assumption.
            body_state.remove(&var.to_lowercase());
            check_mutation_fields_in_stmts(body, &mut body_state, entity_fields)?;
            body_state.remove(&var.to_lowercase());
            *bindings = intersect_bindings(&body_state, &snapshot);
            Ok(())
        }
        Stmt::Try {
            body,
            catch_body,
            catch_var,
            ..
        } => {
            let snapshot = bindings.clone();
            let mut try_state = snapshot.clone();
            check_mutation_fields_in_stmts(body, &mut try_state, entity_fields)?;
            let mut catch_state = snapshot.clone();
            catch_state.remove(&catch_var.to_lowercase());
            check_mutation_fields_in_stmts(catch_body, &mut catch_state, entity_fields)?;
            catch_state.remove(&catch_var.to_lowercase());
            *bindings = intersect_bindings(&try_state, &catch_state);
            Ok(())
        }
        Stmt::Transaction { body } => check_mutation_fields_in_stmts(body, bindings, entity_fields),
    }
}

/// Intersect two binding maps: keep an entry only if both sides agree on the
/// same entity name (case-insensitive). Drops disagreements rather than
/// false-positiving downstream — we'd rather under-report than complain about
/// a field that's legitimate on one branch's bound entity.
fn intersect_bindings(a: &EntityBindings, b: &EntityBindings) -> EntityBindings {
    let mut out = HashMap::with_capacity(a.len().min(b.len()));
    for (k, va) in a {
        if let Some(vb) = b.get(k) {
            if va.eq_ignore_ascii_case(vb) {
                out.insert(k.clone(), va.clone());
            }
        }
    }
    out
}

/// Strip nullable / `Optional<T>` wrappers down to a plain model name. Returns
/// `None` for `List<T>` (field access on a list of items doesn't apply to the
/// list variable itself).
fn strip_type_to_model_name(ty: &str) -> Option<String> {
    let mut t = ty.trim();
    if let Some(stripped) = t.strip_suffix('?') {
        t = stripped.trim();
    }
    let lower = t.to_ascii_lowercase();
    if lower.starts_with("list<") {
        return None;
    }
    if lower.starts_with("optional<") && t.ends_with('>') {
        let inner = &t[9..t.len() - 1];
        return Some(inner.trim().to_string());
    }
    Some(t.to_string())
}

fn check_typed_field_access_in_stmts(
    stmts: &[Stmt],
    locals: &mut HashMap<String, String>,
    model_fields: &HashMap<String, HashSet<String>>,
) -> Result<()> {
    for stmt in stmts {
        check_typed_field_access_in_stmt(stmt, locals, model_fields)?;
    }
    Ok(())
}
